automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -769,7 +769,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.list_price.mean()  "
+   ]
   },
   {
    "cell_type": "markdown",
