automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -770,7 +770,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.list_price.mean()  "
+    "df.list_price.mean()  65.14 is the average pric"
    ]
   },
   {
